<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/fragment_padding">


    <TextView
        android:text="@string/article_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/article_title_edittext"
        android:hint="@string/article_title_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/fragment_horizontal_margin"
        android:layout_marginRight="@dimen/fragment_horizontal_margin"
        android:layout_marginStart="@dimen/fragment_horizontal_margin"
        android:layout_marginEnd="@dimen/fragment_horizontal_margin"
        />
    <TextView
        android:text="@string/article_author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/article_author_edittext"
        android:hint="@string/article_author_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/fragment_horizontal_margin"
        android:layout_marginRight="@dimen/fragment_horizontal_margin"
        android:layout_marginStart="@dimen/fragment_horizontal_margin"
        android:layout_marginEnd="@dimen/fragment_horizontal_margin"/>

    <TextView
        android:text="@string/article_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/article_description_edittext"
        android:hint="@string/article_description_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/fragment_horizontal_margin"
        android:layout_marginRight="@dimen/fragment_horizontal_margin"
        android:layout_marginStart="@dimen/fragment_horizontal_margin"
        android:layout_marginEnd="@dimen/fragment_horizontal_margin"/>

    <TextView
        android:text="@string/article_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/article_body_edittext"
        android:hint="@string/article_body_hint"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:gravity="top"
        android:layout_marginLeft="@dimen/fragment_horizontal_margin"
        android:layout_marginRight="@dimen/fragment_horizontal_margin"
        android:layout_marginStart="@dimen/fragment_horizontal_margin"
        android:layout_marginEnd="@dimen/fragment_horizontal_margin"/>

</LinearLayout>