<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.muaqqibatun.raqib.activities.ArticleEditorActivity">



    <item android:id="@+id/menu_item_article_viewer_editarticle"
        android:title="@string/edit_article"
        android:icon="@android:drawable/ic_menu_edit"
        android:orderInCategory="90"
        app:showAsAction="ifRoom|withText" />

    <item android:id="@+id/menu_item_article_details"
        android:title="@string/info_article"
        android:icon="@android:drawable/ic_menu_info_details"
        android:orderInCategory="91"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />


</menu>
